minor bug fixes to category array and body overflowX

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	background-color: lightgrey;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	margin:0;
+	overflow-x: hidden;
 }
 .center {
 	display: block;
